fix: tag checkboxes not showing selected tags

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -41,7 +41,7 @@ $border-radius: 3px;
     margin-bottom: 30px;
     color: $toggle-on;
   }
-  .radio {
+  .checkbox {
     .option {
       margin-bottom: 10px;
     }
